# postgress-da-ai-agent

./: OAI_CONFIG_LIST  pyproject.toml  report.json  report.txt  results.json
PromptTemplate/: Create A Python Class Postgres
postgres_da_ai_agent/: main.py
postgres_da_ai_agent/agents/: agent_config.py  agents.py
postgres_da_ai_agent/modules/: data_base_query_prompt.py  db.py  embedding.py  file_util.py  llm.py  llm_configuraiton.py  orchestrator.py
